objects/tdc_tvte__ObjectApiName__c/tdc_tvte__ObjectApiName__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ObjectApi</label>
</CustomObject>