objects/tdc_tvte__ObjectApiName__c/fields/tdc_tvte__Email_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Email_Api_Name__c</fullName>
    <label>Email Api Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>