objects/tdc_tvte__ObjectApiName__c/fields/tdc_tvte__Object__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Object__c</fullName>
    <label>Object</label>
    <length>30</length>
    <type>Text</type>
</CustomField>