objects/tdc_tvte__ObjectApiName__c/fields/tdc_tvte__Verify_At_Email_Update__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Verify_At_Email_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify At Email Update</label>
    <type>Checkbox</type>
</CustomField>