objects/tdc_tvte__ObjectApiName__c/fields/tdc_tvte__Verify_At_Input__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Verify_At_Input__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify At Input</label>
    <type>Checkbox</type>
</CustomField>