objects/tdc_tvte__ObjectApiName__c/fields/tdc_tvte__Verify_On_Both__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Verify_On_Both__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify On Both</label>
    <type>Checkbox</type>
</CustomField>